<resources>
    <string name="app_name">Brainy</string>

    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="range_selection">Pick a range:</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Start</string>
    <string name="default_range_value">100</string>
    <string name="default_range_value_min">01:00</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="guess_number_headline">Guess a number between 0 to</string>
    <string name="guess_request">Your Guess:</string>
    <string name="guess_number_done">Done</string>
    <string name="guess_number_title">Guess the Number</string>
    <string name="connect">Connect</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu">Menu</string>
    <string name="connect_to_head_set">Connect to Head Set</string>
    <string name="winner_dialog_title">Well done!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="winner_dialog_feedback">Feedback</string>
    <string name="winner_dialog_play_again">Play again</string>
    <string name="winner_dialog_back">Back</string>
    <string name="approve_button">Guess</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="feedback_activity_title">Feedback</string>
    <string name="winner_dialog_continue">Continue</string>
    <string name="feedbackScoreView">Score:</string>
    <string name="feedbackTimeView">Session time:</string>
    <string name="title_activity_crazy_cube">CrazyCubeActivity</string>
    <string name="CrazyCubeActivityTitle">Crazy Cube</string>
    <string name="title_activity_hot_air_ballon">HotAirBallonActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="timerVal">01:00</string>
    <string name="title_activity_hot_air_balloon_config">HotAirBalloonConfigActivity</string>

    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>

    <string name="choose_headset">Choose headset</string>
    <string name="settings_connect">Connect</string>
    <string name="settings_skip">Skip</string>
    <string name="action_games">Games</string>
    <string name="action_quit">Quit</string>
    <string name="game_quit_dialog_title">Are you sure you want to leave?</string>
    <string name="winner_dialog_quit">Yes</string>
    <string name="winner_dialog_stay">No</string>

    <string-array name="action_list">
        <item>Games</item>
        <item>Settings</item>
        <item>Quit</item>
    </string-array>
    <string name="title_activity_habconfig">HABConfigActivity</string>
    <string name="title_activity_ccconfing">CCConfingActivity</string>
    <string name="title_activity_maind_shooter_game">MaindShooterGameActivity</string>
    <string name="title_activity_mind_shooter_config">MindShooterConfigActivity</string>
    <string name="numberOfSessionsView">Number of sessions:</string>
    <string name="numberOfSessionsChoiceView">1</string>
    <string name="title_activity_game_graph">GameGraphActivity</string>
    <string name="title_activity_action_bar_app">ActionBarAppActivity</string>
    <string name="feedbackBestScoreView">Best score:</string>
    <string name="title_activity_history">HistoryActivity</string>
    <!--<string name="saved_high_score" />-->
    <string name="space_character">\u00A0</string>
    <string name="title_activity_dpfeedback">DPFeedbackActivity</string>
    <string name="title_activity_fb">FBActivity</string>
    <string name="guess_number_help_content">Try to figure the number I\'m thinking with as least attempts as possible.
        \nI will help you!</string>
    <string name="hot_air_balloon_help_content">I\'m giving you one minute to lift the hot air balloon for as high and as long as you can.
        \nHow do you lift it? That\'s easy.. Concentrate!</string>
    <string name="mind_shooter_help_content">You have one minute to pop as many balloons as you can.
        \nYou will get your aiming right only if you\'ll concentrate!</string>
    <string name="crazy_cube_help_content">There is only one different cube each time.
        \nYou have one minute to find as many of them as you can - If you\'ll concentrate it will be easier.</string>
    <string name="crazy_cube_finish_title">Time\'s up!</string>
    <string name="guess_number_finish_title">You got my number!</string>
    <string name="hot_air_balloon_finish_title">Time\'s up!</string>
    <string name="mind_shooter_finish_title">Time\'s up!</string>
    <string name="dp_schedule_explanation">Select on which days you want me to remind you to practice!</string>
    <string name="dp_schedule_title">Reminder</string>
    <string name="done_button">Done</string>

    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
</resources>
